--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "btcrelay-bitcoind",
+  "name": "@atomiqlabs/btc-bitcoind",
   "version": "5.2.1",
   "description": "Connector and synchronizer using bitcoind for bitcoin relay",
   "main": "./dist/index.js",
@@ -22,11 +22,11 @@
   "author": "adambor",
   "license": "ISC",
   "dependencies": {
+    "@atomiqlabs/base": "7.2.0",
     "@atomiqlabs/bitcoind-rpc": "0.9.0",
     "@bitcoinerlab/secp256k1": "1.0.5",
     "bitcoinjs-lib": "6.1.5",
-    "bn.js": "5.2.1",
-    "crosslightning-base": "7.2.0"
+    "bn.js": "5.2.1"
   },
   "devDependencies": {
     "@types/node": "18.18.3",
