--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "adambor",
   "license": "ISC",
   "dependencies": {
-    "@atomiqlabs/base": "7.2.2",
+    "@atomiqlabs/base": "github:atomiqlabs/atomiq-base#add-starknet",
     "@atomiqlabs/bitcoind-rpc": "0.9.0",
     "@bitcoinerlab/secp256k1": "1.0.5",
     "bitcoinjs-lib": "6.1.5",
