--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atomiqlabs/btc-bitcoind",
-  "version": "5.2.3",
+  "version": "5.2.3-dev0",
   "description": "Connector and synchronizer using bitcoind for bitcoin relay",
   "main": "./dist/index.js",
   "types:": "./dist/index.d.ts",
@@ -24,9 +24,7 @@
   "dependencies": {
     "@atomiqlabs/base": "github:atomiqlabs/atomiq-base#add-starknet",
     "@atomiqlabs/bitcoind-rpc": "0.9.0",
-    "@bitcoinerlab/secp256k1": "1.0.5",
-    "bitcoinjs-lib": "6.1.5",
-    "bn.js": "5.2.1"
+    "@scure/btc-signer": "1.6.0"
   },
   "devDependencies": {
     "@types/node": "18.18.3",
