--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./dist/index.js",
   "types:": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ts4": "npx -p typescript@4.9 tsc --noEmit",
+    "build:ts5": "npx -p typescript@5.3 tsc --noEmit"
   },
   "files": [
     "/dist",
@@ -28,6 +30,6 @@
   },
   "devDependencies": {
     "@types/node": "18.18.3",
-    "typescript": "4.9.5"
+    "typescript": ">=4"
   }
 }
