--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atomiqlabs/btc-bitcoind",
-  "version": "10.0.1",
+  "version": "11.0.0",
   "description": "Connector and synchronizer using bitcoind for bitcoin relay",
   "main": "./dist/index.js",
   "types:": "./dist/index.d.ts",
@@ -22,7 +22,7 @@
   "author": "adambor",
   "license": "ISC",
   "dependencies": {
-    "@atomiqlabs/base": "^12.0.0",
+    "@atomiqlabs/base": "github:atomiqlabs/atomiq-base#develop",
     "@atomiqlabs/bitcoind-rpc": "0.9.1",
     "@scure/btc-signer": "1.6.0"
   },
